CPG-DEV/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Opportunity Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Create</fullName>
        </values>
        <values>
            <fullName>Discover</fullName>
        </values>
        <values>
            <fullName>Explore</fullName>
        </values>
        <values>
            <fullName>Present</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AnnualMarginActual__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Project Field</description>
        <label>Annual Margin - Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AnnualMarginEstimated__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Project Field</description>
        <label>Annual Margin - Estimated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AnnualVolumeActual__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Project Field</description>
        <label>Annual Volume - Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AnnualVolumeEstimated__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Project Field</description>
        <label>Annual Volume - Estimated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <picklist>
            <picklistValues>
                <fullName>Application 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application 2</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AveragePriceSpread__c</fullName>
        <formula>Sum_of_Opp_Comp_Prod_Price_Spread__c  / No_of_Competitor_Products__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Price Spread</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_To__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Parent Bill To related to parent customer</description>
        <label>Bill To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Bill_To_Ship_To__c.Universal_Customer__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Bill_To_Ship_To__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BusinessAlias__c</fullName>
        <formula>CASE(  Business__r.Name  ,
&quot;Go To Market Corporate Accounts&quot;,&quot;GTM Corp Accts&quot;, 
&quot;Go To Market Shared Sales North America&quot;,&quot;GTM SS NA&quot;, 
&quot;Go To Market Shared Sales EMEA&quot;,&quot;GTM SS EMEA&quot;, 
&quot;Global Edible Oil Solutions North America&quot;,&quot;GEOS NA&quot;, 
&quot;Global Edible Oil Solutions Europe&quot;,&quot;GEOS Europe&quot;, 
&quot;Cargill Industrial Specialties&quot;,&quot;CIS&quot;, 
&quot;Global Edible Oil Solutions Mexico&quot;,&quot;GEOS Mexico&quot;, 
&quot;Global Edible Oil Solutions South America&quot;,&quot;GEOS SA&quot;, 
&quot;Global Edible Oil Solutions Venezuela&quot;,&quot;GEOS Venezuela&quot;, 
&quot;Global Edible Oil Solutions India&quot;,&quot;GEOS India&quot;, 
&quot;Global Edible Oil Solutions Asia Pacific&quot;,&quot;GEOS AP&quot;, 
&quot;Foods Brazil&quot;,&quot;Foods Brazil&quot;, 
&quot;Starches &amp; Sweeteners North America&quot;,&quot;SSNA&quot;, 
&quot;Starches &amp; Sweeteners Europe&quot;,&quot;SSE&quot;, 
&quot;Texturizing Solutions&quot;,&quot;CTS&quot;, 
&quot;Starches &amp; Sweeteners South America&quot;,&quot;SSSA&quot;, 
&quot;Foods Middle East, Turkey, and North Africa&quot;,&quot;CF METNA&quot;, 
&quot;Cargill Cocoa &amp; Chocolate&quot;,&quot;CCC&quot;, 
&quot;Cocoa &amp; Chocolate North America&quot;,&quot;CCCNA&quot;, 
&quot;Cocoa &amp; Chocolate Brazil&quot;,&quot;CCC Brazil&quot;, 
&quot;Refined Oils Asia Pacific&quot;,&quot;ROAP&quot;, 
&quot;Starches &amp; Sweeteners China&quot;,&quot;S&amp;S China&quot;, 
&quot;Starches &amp; Sweeteners Southeast Asia&quot;,&quot;S&amp;S SE Asia&quot;, 
&quot;Toshoku&quot;,&quot;Toshoku&quot;, 
&quot;Foods India&quot;,&quot;Foods India&quot;, 
&quot;Malt&quot;,&quot;Malt&quot;, 
&quot;Salt&quot;,&quot;Salt&quot;, 
&quot;Cargill Deicing Technology&quot;,&quot;CDT&quot;, 
&quot;Food Argentina&quot;,&quot;Foods Argentina&quot;, 
&quot;&quot;
)</formula>
        <label>Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <formula>TEXT(CreatedBy.Cargill_Business_Unit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Name</label>
        <referenceTo>Business__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BuyerType__c</fullName>
        <label>Buyer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Relationship Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poker Player</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CancellationDate__c</fullName>
        <description>Project Field</description>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CloseDateTEXT__c</fullName>
        <formula>TEXT(CloseDate)</formula>
        <label>Close Date (TEXT)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloseDateVariance__c</fullName>
        <description>Variance between Estimated Close Data and Actual Close Date</description>
        <formula>EstimatedCloseDate__c - CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Variance between Estimated Close Data and Actual Close Date</inlineHelpText>
        <label>Close Date Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloseReason__c</fullName>
        <label>Close Reason</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Business declined to pursue the project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Currency Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer declined to pursue the project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freight Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Match not approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No capacity to sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price not competitive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referred to Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strong relationship with competition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not actively pursuing - documentation only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proprietary Product</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CommercializationDate1__c</fullName>
        <description>Project Field</description>
        <label>Commercialization Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CommercializationDate2__c</fullName>
        <description>Project Field</description>
        <label>Commercialization Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CommericalizationDate3__c</fullName>
        <description>Project Field</description>
        <label>Commericalization Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CustomerMeetingReport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Meeting Report</label>
        <referenceTo>CustomerMeetingReport__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DetailLink__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+ Id</formula>
        <label>Detail Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DevelopmentDate__c</fullName>
        <description>Project Field</description>
        <label>Development Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EstimatedCloseDate__c</fullName>
        <label>Estimated Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EstimatedShipDate__c</fullName>
        <label>Estimated Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <label>External ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Competitor__c</fullName>
        <formula>IF( No_of_Competitor_Products__c &gt; 0 , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IfLostCompetitorLostTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>If Lost, Competitor Lost To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities Lost to Competitor</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IfWonCompetitorWonAgainst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>If Won, Competitor Won Against</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Competitor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (If Won, Competitor Won Against)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ImplementationDate__c</fullName>
        <description>Project Field</description>
        <label>Implementation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InactiveProducts2__c</fullName>
        <label>Number of Inactive Products</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.ActiveProduct2__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>InactiveProducts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsApexCloned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsApexCloned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCreatedFromLead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsCreatedFromLead</description>
        <label>IsCreatedFromLead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSourceLeadConversion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will be TRUE if opportunity is being created from Lead Conversion Process.</description>
        <label>Is Source Lead Conversion?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeadSource__c</fullName>
        <globalPicklist>Lead_Source</globalPicklist>
        <label>Lead Source</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>LegacyRecordID__c</fullName>
        <label>Legacy Record ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LossReason__c</fullName>
        <label>Loss Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Lost to Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Budget / Lost Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Decision / Non-Responsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Lost to Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Budget / Lost Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Decision / Non-Responsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MeasureDate__c</fullName>
        <description>Project Field</description>
        <label>Measure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_of_Competitor_Products__c</fullName>
        <description>US70: Count number of competitor products</description>
        <label>No. of Competitor Products</label>
        <summaryForeignKey>Opportunity_Competitor_Product__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberOfProducts__c</fullName>
        <description>This is created for validation rule that restricts creation of products on closed own opportunity</description>
        <label>Number of Products</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Competitive_Bids__c</fullName>
        <label>Number of Competitive Bids</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Source Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Automated Renewal Source Opportunity</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OnHoldDate__c</fullName>
        <description>Project Date</description>
        <label>On Hold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OpportunitySpace__c</fullName>
        <label>Opportunity Space</label>
        <picklist>
            <picklistValues>
                <fullName>Space1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Space2</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OpportunityType__c</fullName>
        <label>Opportunity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Defense</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_End_Date__c</fullName>
        <description>This is to place under close date on opportunity</description>
        <label>Opportunity End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OriginalName__c</fullName>
        <description>Holding field for the original User input Opportunity Name used in the Opportunity Naming Convention.</description>
        <label>Original Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Projects*</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PartiallyWon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partially Won</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <globalPicklist>Payment_Terms</globalPicklist>
        <label>Payment Term</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Measure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implement</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PotentialStage__c</fullName>
        <formula>IF(
   Budget_Confirmed__c = TRUE,
   &quot;Discover&quot;,

/* Add additional fields required to advance to each Opportunity Stage */


   &quot;Explore&quot;
   )</formula>
        <label>Potential Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PricePointSource__c</fullName>
        <label>Price Point Source</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Estimate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail/consumer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PricePoint__c</fullName>
        <description>US#44</description>
        <label>Price Point</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PrimaryCategory__c</fullName>
        <label>Primary Category</label>
        <picklist>
            <picklistValues>
                <fullName>Category1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category2</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ROIAnalysisCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReasonDetail__c</fullName>
        <label>Reason Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ReasonLost__c</fullName>
        <description>US74</description>
        <label>Reason Lost</label>
        <picklist>
            <picklistValues>
                <fullName>Due to Price (gross)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Capacity to Sell (volume)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not interested in the Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stronger relationship with the competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Due to Product Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot meet distributor minimums</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Execution Challenges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Distribution (area)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer wants to expand number of suppliers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>We were not price competitive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product not a match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Due to Price (net)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abandoned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReasonWon__c</fullName>
        <description>US70: Required if Opp won and competitor in deal</description>
        <label>Reason Won</label>
        <picklist>
            <picklistValues>
                <fullName>Due to Price (gross)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Capacity to Sell (volume)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not interested in the Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stronger relationship with the competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Due to Product Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot meet distributor minimums</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Execution Challenges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Distribution (area)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer wants to expand number of suppliers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>We were not price competitive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product not a match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Due to Price (net)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RelatedtoRFP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Related to RFP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RenewalDate__c</fullName>
        <inlineHelpText>Date the Opportunity will be cloned automatically</inlineHelpText>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShipDate__c</fullName>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Bill_To_Ship_To__c.Bill_To__c</field>
                <operation>equals</operation>
                <valueField>$Source.Bill_To__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Bill_To_Ship_To__c</referenceTo>
        <relationshipLabel>Opportunities (Ship To)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShippingDate__c</fullName>
        <label>Shipping Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SourceOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Source Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sum_of_Opp_Comp_Prod_Price_Spread__c</fullName>
        <label>Sum of Opp Comp Prod Price Spread</label>
        <summarizedField>Opportunity_Competitor_Product__c.Price_Spread__c</summarizedField>
        <summaryForeignKey>Opportunity_Competitor_Product__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tools__c</fullName>
        <label>Tools</label>
        <picklist>
            <picklistValues>
                <fullName>Tool A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tool B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tool C</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <description>Unit of Measure</description>
        <globalPicklist>UnitOfMeasure</globalPicklist>
        <label>Unit of Measure</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <label>Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkFlowOrder__c</fullName>
        <label>WorkFlowOrder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Closed_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Opportunity Sales Process</businessProcess>
        <label>Closed Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Opportunity Sales Process</businessProcess>
        <label>New Opportunity</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Block_Closed_Won_with_Inactive_Products</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
       InactiveProducts2__c &gt; 0,
   ISPICKVAL( StageName , &apos;Closed Won&apos;),
    NOT(ISPICKVAL( PRIORVALUE(StageName), &apos;Closed Won&apos; ))
   )</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>Opportunity Validation Error:  Cannot update Stage to &quot;Closed Won
 if there are INACTIVE Products associated with the Opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ClosedLostReason</fullName>
        <active>true</active>
        <description>User should be forced to enter a closed-lost reason when an opportunity is marked as closed</description>
        <errorConditionFormula>ISPICKVAL(StageName, &apos;Closed Lost&apos;)  &amp;&amp;  ISPICKVAL( CloseReason__c ,&apos;&apos;)</errorConditionFormula>
        <errorDisplayField>CloseReason__c</errorDisplayField>
        <errorMessage>Opportunity Close Validation Error: Closed Reason required.</errorMessage>
    </validationRules>
</CustomObject>